--- a/Scripts/OTZ.results.newRpath.Rmd
+++ b/Scripts/OTZ.results.newRpath.Rmd
@@ -312,7 +312,6 @@ target_sp <- "euphausiids"
 target_F <- 0.50
 names(target_F) <- target_sp 
 
-library(data.table)
 scene1_euph <- copy(base_sim_scene)
 run1_euph <- rsim.run(scene1_euph, method = 'AB', years=2001)
 for (yr in 2002:2050){
@@ -330,7 +329,6 @@ assessment
   run1_euph <- rsim.step(scene1_euph, run1_euph, method = 'AB', year.end=yr)  
 }  
 rsim.plot(run1_euph,all_species)  
-rsim.plot(run1,all_species) 
 
 z_1_euph <-rsim.plot.fun(run1_euph)
 z_1_euph <-as.data.frame(z_1_euph)
@@ -340,7 +338,7 @@ data_1_euph <- gather(z_1_euph, key = spp, value = biomass, -month )
 
 #25% harvest rate
 target_sp <- "euphausiids"
-target_F <- 0.50
+target_F <- 0.25
 names(target_F) <- target_sp 
 
 library(data.table)
@@ -387,6 +385,15 @@ predators_end25_nonc <- data_2_euph %>% filter(spp %in% noncommerical_predators,
 predators_end50_comm <- data_1_euph %>% filter(spp %in% commercial_predators, month== 600)
 
 predators_end50_nonc <- data_1_euph %>% filter(spp %in% noncommerical_predators, month== 600)
+```
+
+```{r}
+#When you do ForcedFrate instead of ForcedCatch you still get similar graphs one just has more bumpiness to it 
+test <- adjust.fishing(scene0, "ForcedFRate", "mesopelagics", 2001:2050, value=0.50)
+Fishing.rate <- rsim.run(test, method = 'AB', years= 2001:2050) 
+rsim.plot(Fishing.rate, all_species)
+rsim.plot(run1, all_species)
+
 ```
 
 
