--- a/Scripts/Uncertainty.ranges.Rmd
+++ b/Scripts/Uncertainty.ranges.Rmd
@@ -7,6 +7,7 @@ output: html_document
 library(dplyr)
 library(ggplot2)
 library(readxl)
+library(tidyr)
 ```
 
 ```{r}
@@ -24,5 +25,25 @@ theme(axis.line = element_line(colour = "black")) +
 theme(panel.grid.major = element_blank(), panel.grid.minor = element_blank()) + 
 ggsave(width = 6, height = 4, "~/Documents/OTZ.Manuscript/Images/uncertainty.ranges.jpeg")
 Uncert_range
+```
+
+#Density function
+```{r}
+standard_theme <- theme_bw() + theme(panel.border = element_rect(fill=NA, colour = "black", size=1)) +
+theme(panel.grid.major = element_blank(), panel.grid.minor = element_blank()) + theme(legend.text.align= 0, legend.title= element_text(size = 12), legend.text = element_text(size= 10), axis.text=element_text(size=10), axis.title=element_text(size=12)) 
+  
+critical_wtp_values <- read_excel("~/Documents/OTZ.manuscript/Excel/critical.wtp.values.xlsx")
+mean_critical <- critical_wtp_values %>% summarize(mean= mean(Critical.values)) 
+mean_WTP <- critical_wtp_values %>% drop_na() %>% summarize(mean= mean(WTP.values)) 
+
+critical.WTP.density <- critical_wtp_values %>% ggplot() + geom_density(aes(x= Critical.values, fill= "red")) + geom_density(aes(x= WTP.values,fill= "blue")) + xlab("Critical value") + ylab("Density") + labs("Value type") + geom_vline(data=mean_critical, aes(xintercept= mean)) + geom_vline(data=mean_WTP, aes(xintercept= mean), linetype="dashed") + scale_x_continuous(expand = c(0, 0)) + labs(fill= "Value type") + scale_y_continuous(expand = c(0, 0)) +scale_fill_manual(labels = c("WTP value", "Critical value"), values = c("blue", "red")) + standard_theme + theme(legend.position = "none") + ggsave(width = 6, height = 4, "~/Documents/OTZ.manuscript/Images/values.density.jpeg")
+  
+
+library(grid)
+library(cowplot)
+legend <- get_legend(critical.WTP.density)
+pdf("/Users/SallyDowd/Documents/OTZ.manuscript/Images/Legends/value.density.legend.pdf")
+grid.draw(legend)
+dev.off()
 ```
 
