--- a/Scripts/Diet.description.Rmd
+++ b/Scripts/Diet.description.Rmd
@@ -11,6 +11,10 @@ library(Rpath)
 library(tidyverse)
 
 GroupInfo_CalCur_USE <- read_csv("/Users/sallydowd/Documents/GitHub/mesopelagic-fishing/Data/GroupInfo_CalCur-USE.csv")
+
+Diet <- read.csv("/Users/sallydowd/Documents/GitHub/mesopelagic-fishing/Data/Diet_CalCur_USE.csv")  
+Diet <- Diet %>% rename("Juv. hake" = "Juv..hake", "Yellowtail rock."= "Yellowtail.rock.", "Shelf rock."= "Shelf.rock.", "P. Ocean Perch"= "P..Ocean.Perch", "Longspine thorny."= "Longspine.thorny.", "Tufted Puffin"= "Tufted.Puffin", "Leach's S. Petrel"= "Leach.s.S..Petrel","Fin whale"= "Fin.whale", "Slope rock."= "Slope.rock.", "carniv-zoops"= "carniv.zoops", "small jellies"= "small.jellies", "large jellies"= "large.jellies", "pandalid shp"= "pandalid.shp", "benthic shp"= "benthic.shp", "tanner crab"= "tanner.crb", "Benthic fish"= "Benthic.fish", "surf perch"= "surf.perch", "Other cephal."= "Other.cephal.", "Market squid"= "Market.squid", "Pacific Mackerel"= "Pacific.Mackerel")
+Diet
 ```
 
 #Functions needed- turn R markdown into R script eventually so can just source the functions
@@ -60,8 +64,6 @@ theme(panel.grid.major = element_blank(), panel.grid.minor = element_blank()) + 
 
 #Define datasets
 ```{r}
-Diet <- read.csv("/Users/sallydowd/Documents/GitHub/mesopelagic-fishing/Data/Diet_CalCur_USE.csv")  
-  
 predators_of_mesopelagic <- Diet[,c(1,16,19, 29:30, 34, 38:39, 43:49, 51:57, 59:61, 64, 66:68, 70:71, 73:74, 77:81, 83, 86:89)]
 mesopelagic_pred <- Diet[15, c(1,16,19, 29:30, 34, 38:39, 43:49, 51:57, 59:61, 64, 66:68, 70:71, 73:74, 77:81, 83, 86:89)]
 prey_of_mesopelagic <- Diet[c(3,6:10,15,18), c(1,16)]
@@ -153,7 +155,19 @@ scale_color_discrete(type = "viridis") + standard_theme + ggsave(width = 6, heig
 #Identify prey of mesopelagics where higher diet proportion predators of mesopelagic fish have at least 0.05 in their diet 
 prey_of_mesopelagic_preds <- Diet[c(3,6:10,18), c(1,30,34,39, 43, 49, 52, 55, 57, 64, 71,77,86)] %>% pivot_longer(-DIETS) %>% filter(value >= 0.05) %>% rename(spp= name) 
 
-avg_pmp <- prey_of_mesopelagic_preds %>% summarize(mean(value)) #mean value of diet composition for predators on mesopelagic prey
+data_2_edt <- data_2 %>% left_join(GroupInfo_edt, by= "spp") %>% left_join(combo, by= "spp") %>% drop_na() %>% group_by(classification, month) %>% mutate(total_biomass = sum(Biomass)) %>% #sum initial biomass of each species classification by month
+ungroup() %>% mutate(percent_biomass= Biomass/total_biomass) %>% #divide initial biomass for a species by total biomass for a species group
+mutate(weighted_biomass = biomass*percent_biomass) %>%
+#get weighted biomass by multiplying relative biomass by percent biomass 
+group_by(classification, month) %>% summarize(agg_rel_biomass= sum(weighted_biomass))
+#get aggregated relative biomass for each species classification by summing weighted biomass for each species classification for each month  
+
+Diet
+
+avg_pmp <- prey_of_mesopelagic_preds %>% left_join(GroupInfo_edt, by= "spp") %>% mutate(total_biomass= sum(Biomass)) %>% mutate(percent_biomass= Biomass/total_biomass) %>% mutate(weighted_biomass = 1*percent_biomass) %>% mutate(weighted_diet= weighted_biomass*value) %>% summarize(mean(weighted_diet))
+
+
+%>% summarize(mean(value)) #mean value of diet composition for predators on mesopelagic prey
 avg_pmf <- predators_of_mesopelagic[15,] %>% pivot_longer(-DIETS) %>% filter(value >= 0.05) %>% summarize(mean(value)) #mean value of diet composition for mesopelagic predators on mesopelagic fish
 avg_mfmp <- Diet[c(3,6,7, 8:10, 18), c(1,16)] %>% summarize(mean(mesopelagics)) #mean value of diet composition for mesopelagic fish on mesopelagic prey
 avg_mpp <- Diet[c(29,33,38, 42, 48, 51, 54, 56, 63, 70,76,85), c(1,4,7,8, 9:11, 19)] %>% pivot_longer(-DIETS) %>% summarize(mean(value)) #mean value of diet composition for mesopelagic prey on mesopelagic predators
